--- a/app/src/main/res/layout/repository_item.xml
+++ b/app/src/main/res/layout/repository_item.xml
@@ -24,11 +24,12 @@
 
             <ImageView
                 android:id="@+id/iv_favorite"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 android:layout_margin="16dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
+                android:contentDescription="Favoritos"
                 android:focusable="true"
                 android:src="@drawable/ic_share"
                 app:layout_constraintBottom_toBottomOf="parent"
